Implemented communication buffers, and set up system simulation
Signed-off-by: dave <daveexinor@cmail.carleton.ca>